--- a/welcome.html
+++ b/welcome.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles2.css">
     <title>Rafael</title>
-    <link rel="icon" href="images/Roblocraft-Light-Dark.png">
+    <link rel="icon" href="Roblocraft-Light-Dark.png">
     <style>
         /* From Uiverse.io by satyamchaudharydev */ 
 /* === removing default button style ===*/
