--- a/projets.html
+++ b/projets.html
@@ -18,11 +18,15 @@
     </header>
 <div class="projects-container">
   <div class="card3">
-    <div class="card3-details">
-      <p class="text-title">Site web</p>
-      <p class="text-body">Oe cé trop classe</p>
+    <div class="header3"></div>
+    <div class="info3">
+      <p class="title3">Mon propre site web</p>
+      <p>Oui, en faîte, ce que vous voyez maintenant c'est mon projet quoi..</p>
     </div>
-    <button class="card-button">Ouvrir</button>
-  </div>
+    <div class="footer3">
+      <p class="tag3">#HTML #CSS #PERSO</p>
+      <button type="button" class="action"><a href="project1.html" class="voirplus">Voir plus</a></button>
+</div>
+</div>
 </body>
 </html>
