--- a/project1.html
+++ b/project1.html
@@ -6,8 +6,29 @@
     <title>Projet 1 - Rafael</title>
     <link rel="stylesheet" href="styles.css"> <!-- Lien vers votre fichier CSS -->
     <link rel="icon" href="images/Roblocraft-Light-Dark.png">
+    <style>
+        .text1 {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: flex-start; /* Aligne les éléments à gauche */
+            padding: 20px; /* Ajoutez un peu de padding si nécessaire */
+        }
+    </style>
 </head>
 <body>
-    
+    <header class="header">
+        <img src="images\rafael_dark_nobg.png" alt="Logo" /> <!-- Remplacez "logo.png" par le chemin de votre logo -->
+        <nav>
+            <a href="index.html">Accueil</a>
+            <a href="projets.html">Projets</a>
+            <a href="contact.html">Contact</a>
+        </nav>
+    </header>
+    <div class="text1">
+        <p style="font-size: small; color: gray; text-align: right;">17 décembre 2024</p>
+        <h1>Mon propre site ?</h1>
+        <p>En vrai de vrai je ne savais pas quoi faire, j'avais du temps a perdre je me suis lancé dans mon site. C'est tout hyn, jvais pas faire un article de 200 lignes !</p>
+    </div>
 </body>
 </html>
