--- a/projets.html
+++ b/projets.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header class="header">
-        <img src="images\rafael_dark_nobg.png" alt="Logo" /> <!-- Remplacez "logo.png" par le chemin de votre logo -->
+        <img src="=rafael_dark_nobg.png" alt="Logo" /> <!-- Remplacez "logo.png" par le chemin de votre logo -->
         <nav>
             <a href="index.html">Accueil</a>
             <a href="projets.html">Projets</a>
