--- a/projets.html
+++ b/projets.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css"> <!-- Lien vers votre fichier CSS -->
     <title>Projets</title>
-    <link rel="icon" href="images/Roblocraft-Light-Dark.png">
+    <link rel="icon" href="Roblocraft-Light-Dark.png">
 </head>
 <body>
     <header class="header">
