--- a/project1.html
+++ b/project1.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projet 1 - Rafael</title>
     <link rel="stylesheet" href="styles.css"> <!-- Lien vers votre fichier CSS -->
-    <link rel="icon" href="images/Roblocraft-Light-Dark.png">
+    <link rel="icon" href="Roblocraft-Light-Dark.png">
     <style>
         .text1 {
             display: flex;
@@ -18,7 +18,7 @@
 </head>
 <body>
     <header class="header">
-        <img src="images\rafael_dark_nobg.png" alt="Logo" /> <!-- Remplacez "logo.png" par le chemin de votre logo -->
+        <img src="rafael_dark_nobg.png" alt="Logo" /> <!-- Remplacez "logo.png" par le chemin de votre logo -->
         <nav>
             <a href="index.html">Accueil</a>
             <a href="projets.html">Projets</a>
