--- a/contact.html
+++ b/contact.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css"> <!-- Lien vers votre fichier CSS -->
     <title>Contact</title>
-    <link rel="icon" href="images/Roblocraft-Light-Dark.png">
+    <link rel="icon" href="Roblocraft-Light-Dark.png">
 </head>
 <body>
     <header class="header">
-        <a href="index.html"><img src="images\rafael_dark_nobg.png" alt="Logo" /></a>
+        <a href="index.html"><img src="rafael_dark_nobg.png" alt="Logo" /></a>
         <nav>
             <a href="index.html">Accueil</a>
             <a href="projets.html">Projets</a>
