--- a/project1.html
+++ b/project1.html
@@ -18,7 +18,7 @@
 </head>
 <body>
     <header class="header">
-        <img src="rafael_dark_nobg.png" alt="Logo" /> <!-- Remplacez "logo.png" par le chemin de votre logo -->
+        <a href="index.html"><img src="rafael_dark_nobg.png" alt="Logo" /></a>
         <nav>
             <a href="index.html">Accueil</a>
             <a href="projets.html">Projets</a>
