--- a/projets.html
+++ b/projets.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css"> <!-- Lien vers votre fichier CSS -->
     <title>Projets</title>
-    <link rel="icon" href="Roblocraft-Light-Dark.png">
+    <link rel="icon" href="images/Roblocraft-Light-Dark.png">
 </head>
 <body>
     <header class="header">
-        <a href="index.html"><img src="rafael_dark_nobg.png" alt="Logo" /></a>
+      <a href="index.html"><img src="images\rafael_dark_nobg.png" alt="Logo" /></a>
         <nav>
             <a href="index.html">Accueil</a>
             <a href="projets.html">Projets</a>
@@ -26,6 +26,17 @@
     <div class="footer3">
       <p class="tag3">#HTML #CSS #PERSO</p>
       <button type="button" class="action"><a href="project1.html" class="voirplus">Voir plus</a></button>
+</div>
+</div>
+<div class="card3">
+    <div class="header3"></div>
+    <div class="info3">
+      <p class="title3"><i>Bientôt !</i></p>
+      <p><i>Ca arrive bientôt ! Ca devrait être un bon projet pour une fois mdrr</i></p>
+    </div>
+    <div class="footer3">
+      <p class="tag3">#AVIS #INSTAGRAM</p>
+      <button type="button" class="action" disabled><a href="" class="voirplus">Bientôt...</a></button>
 </div>
 </div>
 </body>
