--- a/projets.html
+++ b/projets.html
@@ -35,7 +35,7 @@
       <p><i>Ca arrive bientôt ! Ca devrait être un bon projet pour une fois mdrr</i></p>
     </div>
     <div class="footer3">
-      <p class="tag3">#AVIS #INSTAGRAM</p>
+      <p class="tag3">#PROUT</p>
       <button type="button" class="action" disabled><a href="" class="voirplus">Bientôt...</a></button>
 </div>
 </div>
